--- a/about/index.html
+++ b/about/index.html
@@ -19,11 +19,11 @@
 	<meta name="description" content="About ATOM Digital Business Software Consultancy">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie8.css" /><![endif]-->
-	<link rel="icon" type="image/x-icon" href="/atom-digital-site/assets/images/favicon.ico">
+	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="/assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
+	<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
 </head>
 
@@ -36,7 +36,7 @@
 
 <!-- Header -->
 <header id="header">
-	<a href="/atom-digital-site/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -60,7 +60,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+				<li><a href="/" class="link">Home</a></li>
 			
 		
 			
@@ -86,19 +86,19 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
+				<li><a href="/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+				<li><a href="/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/about/">About Us</a></li>
+				<li><a href="/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -135,10 +135,10 @@
 
 <div class="box alt">
 	<div class="row 90% uniform">
-		<div class="3u"><span class="image fit"><img src="/atom-digital-site/assets/images/brands/toyota.jpg" alt="" /></span></div>
-		<div class="3u"><span class="image fit"><img src="/atom-digital-site/assets/images/brands/optus.png" alt="" /></span></div>
-		<div class="3u"><span class="image fit"><img src="/atom-digital-site/assets/images/brands/steadfast.png" alt="" /></span></div>
-		<div class="3u$"><span class="image fit"><img src="/atom-digital-site/assets/images/brands/dulux.png" alt="" /></span></div>
+		<div class="3u"><span class="image fit"><img src="/assets/images/brands/toyota.jpg" alt="" /></span></div>
+		<div class="3u"><span class="image fit"><img src="/assets/images/brands/optus.png" alt="" /></span></div>
+		<div class="3u"><span class="image fit"><img src="/assets/images/brands/steadfast.png" alt="" /></span></div>
+		<div class="3u$"><span class="image fit"><img src="/assets/images/brands/dulux.png" alt="" /></span></div>
 	</div>
 </div>
  
@@ -238,13 +238,13 @@
 </div>
 
 <!-- Scripts -->
-	<script src="/atom-digital-site/assets/js/jquery.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/atom-digital-site/assets/js/skel.min.js"></script>
-	<script src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/atom-digital-site/assets/js/main.js"></script>
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/jquery.scrolly.min.js"></script>
+	<script src="/assets/js/jquery.scrollex.min.js"></script>
+	<script src="/assets/js/skel.min.js"></script>
+	<script src="/assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="/assets/js/main.js"></script>
 
 
 </body>
