--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie8.css" /><![endif]-->
-	<link rel="icon" type="image/x-icon" href="/atom-digital-site/assets/images/favicon.ico">
+	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="/assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
+	<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
 </head>
 
@@ -36,7 +36,7 @@
 
 <!-- Header -->
 <header id="header" class="alt">
-	<a href="/atom-digital-site/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -60,7 +60,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+				<li><a href="/" class="link">Home</a></li>
 			
 		
 			
@@ -86,19 +86,19 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
+				<li><a href="/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+				<li><a href="/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/about/">About Us</a></li>
+				<li><a href="/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -132,7 +132,7 @@
 <section id="one" class="tiles">
   
   <article>
-    <a href="/atom-digital-site/what-we-do/" class="link">
+    <a href="/what-we-do/" class="link">
       <span class="image">
         <img src="" alt="What we do" />
       </span>
@@ -144,7 +144,7 @@
   </article>
   
   <article>
-    <a href="/atom-digital-site/services/" class="link">
+    <a href="/services/" class="link">
       <span class="image">
         <img src="" alt="Our Services" />
       </span>
@@ -156,7 +156,7 @@
   </article>
   
   <article>
-    <a href="/atom-digital-site/examples-of-digital-transformation/" class="link">
+    <a href="/examples-of-digital-transformation/" class="link">
       <span class="image">
         <img src="" alt="Examples" />
       </span>
@@ -168,7 +168,7 @@
   </article>
   
   <article>
-    <a href="/atom-digital-site/about/" class="link">
+    <a href="/about/" class="link">
       <span class="image">
         <img src="" alt="About Us" />
       </span>
@@ -293,13 +293,13 @@
 </div>
 
 <!-- Scripts -->
-	<script src="/atom-digital-site/assets/js/jquery.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/atom-digital-site/assets/js/skel.min.js"></script>
-	<script src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/atom-digital-site/assets/js/main.js"></script>
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/jquery.scrolly.min.js"></script>
+	<script src="/assets/js/jquery.scrollex.min.js"></script>
+	<script src="/assets/js/skel.min.js"></script>
+	<script src="/assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="/assets/js/main.js"></script>
 
 
 </body>
