--- a/landing/index.html
+++ b/landing/index.html
@@ -11,11 +11,11 @@
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie8.css" /><![endif]-->
-	<link rel="icon" type="image/x-icon" href="/atom-digital-site/assets/images/favicon.ico">
+	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="/assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
+	<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
 </head>
 
@@ -27,7 +27,7 @@
 
 <!-- Header -->
 <header id="header" class="alt style2">
-	<a href="/atom-digital-site/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -51,7 +51,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+				<li><a href="/" class="link">Home</a></li>
 			
 		
 			
@@ -77,19 +77,19 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
+				<li><a href="/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+				<li><a href="/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/about/">About Us</a></li>
+				<li><a href="/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -103,7 +103,7 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-                    <img src="/atom-digital-site/assets/images/pic07.jpg" alt="">
+                    <img src="/assets/images/pic07.jpg" alt="">
                 </span>
                 <header class="major">
 
@@ -135,7 +135,7 @@
 <section id="two" class="spotlights">
 	<section>
 		<a href="generic.html" class="image">
-			<img src="/atom-digital-site/assets/images/pic08.jpg" alt="" data-position="center center" />
+			<img src="/assets/images/pic08.jpg" alt="" data-position="center center" />
 		</a>
 		<div class="content">
 			<div class="inner">
@@ -151,7 +151,7 @@
 	</section>
 	<section>
 		<a href="generic.html" class="image">
-			<img src="/atom-digital-site/assets/images/pic09.jpg" alt="" data-position="top center" />
+			<img src="/assets/images/pic09.jpg" alt="" data-position="top center" />
 		</a>
 		<div class="content">
 			<div class="inner">
@@ -167,7 +167,7 @@
 	</section>
 	<section>
 		<a href="generic.html" class="image">
-			<img src="/atom-digital-site/assets/images/pic10.jpg" alt="" data-position="25% 25%" />
+			<img src="/assets/images/pic10.jpg" alt="" data-position="25% 25%" />
 		</a>
 		<div class="content">
 			<div class="inner">
@@ -292,13 +292,13 @@
 </div>
 
 <!-- Scripts -->
-	<script src="/atom-digital-site/assets/js/jquery.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/atom-digital-site/assets/js/skel.min.js"></script>
-	<script src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/atom-digital-site/assets/js/main.js"></script>
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/jquery.scrolly.min.js"></script>
+	<script src="/assets/js/jquery.scrollex.min.js"></script>
+	<script src="/assets/js/skel.min.js"></script>
+	<script src="/assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="/assets/js/main.js"></script>
 
 
 </body>
